# CDAS

./: .codecov.yml  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ai-integration-spec.md  alembic.ini  cli-specification.md  database-schema-spec.md  document-processor-spec.md  financial-analysis-spec.md  project-plan.md  pyproject.toml  pytest.ini  reporting-system-spec.md  requirements-dev.txt  requirements.txt  setup.py  test_real_api.py  tox.ini  usage.md
.claude/: settings.local.json
.github/workflows/: deploy.yml  test.yml
cdas/: cli.py  config.py  interactive_shell.py
cdas/ai/: __init__.py  anthropic_wrapper.py  embeddings.py  llm.py  monkey_patch.py  openai_wrapper.py  question_answering.py
cdas/analysis/: __init__.py  network.py
cdas/db/: init.py  models.py  operations.py  project_manager.py  reset.py  session.py
cdas/document_processor/: __init__.py  factory.py  handwriting.py  interfaces.py  ocr.py  processor.py
cdas/financial_analysis/: base.py  base_impl.py  engine.py
cdas/utils/: di.py  (+8 more)
docs/: ai-integration.md  ci_cd.md  interactive_shell.md
examples/: .env.example  README.md  ai_integration_example.py  document_processor_example.py  fix_anthropic.py  minimal_anthropic.py  minimal_openai.py  network_analysis_example.py  simple_anthropic_test.py  test_anthropic_connection.py  test_anthropic_tools.py  test_embedding_manager.py  test_llm_manager.py  test_openai.py  test_openai_connection.py  test_openai_models.py  verify_api_key.py
migrations/: README  env.py
scripts/: setup_testing.py
tests/: README.md  run_ai_tests.py  run_integration_tests.py
(+106 files in other folders)
